tests/decompile-test/errors/image_too_large.ts
// @case: image too large
/// <reference path="../testBlocks/mb.ts" />
let item = images.createBigImage(`
    . . . . .   . . . . .   . . . . .
    . # # # .   . # # # .   . # # # .
    . # . # .   . # . # .   . # . # .
    . # # # .   . # # # .   . # # # .
    . . . . .   . . . . .   . . . . .
    `)

// @case: image too small

let z = images.createBigImage(`
    . .
    . #
    . #
    . #
    . .
    `)